correct favicon and menu on small devices

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -85,15 +85,28 @@ a:visited {
 }
 
 @media only screen and (max-width: 950px) {
-  .hamburger {
+  /* .hamburger {
     display: block;
-  }
+  } */
   .navbar {
     list-style-type: none;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    display: none;
+    /* display: none; */
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  header {
+    display: block;
+  }
+  .navbar {
+    list-style-type: none;
+    display: block;
+    flex-direction: column;
+    justify-content: space-between;
+    /* display: none; */
   }
 }
 
@@ -152,6 +165,15 @@ figure > img {
     width: 75%;
     object-fit: cover;
     border-radius: 16px;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  figure > img {
+    display: none;
+  }
+  .hero-article {
+    width: 100%;
   }
 }
 
@@ -271,9 +293,7 @@ figure > img {
   width: 80px;
   height: 80px;
 }
-.testimonial-text {
-  /* float: left; */
-}
+
 .testimonial-rating {
   margin-top: 10px;
 }
